<resources>
    <string name="app_name">Klimahelse</string>

    <!-- Onboarding -->
    <string name="onboarding_title">Velkommen til klimahelse!</string>
    <string name="onboarding_description">Klimahelse gir deg informasjon om hvordan været negativt kan påvirke din helse. Følg denne korte veiledningen for skreddersy appen for dine behov!</string>
    <string name="setup_preferences">KOM I GANG</string>
    <string name="done">Ferdig</string>
    <string name="next">Neste</string>
    <string name="back">Tilbake</string>
    <string name="logoDescription">Logo</string>
    <string name="onboardingDashboardTitle">Tilpass for dine behov</string>
    <string name="onboardingDashboardDesc">Velg hvilke kategorier du er interessert i. Disse vil dukke opp som moduler i ditt dashboard.</string>
    <string name="onboardingPushTitle">Vær forberedt</string>
    <string name="onboardingPushDesc">Hver morgen sender vi deg en kort oppsummering for hvordan valgte kategorier kan påvirke dagen din.</string>
    <string name="onboardingLocationTitle">Område for varsler</string>
    <string name="onboardingLocationDesc">Vi finner varsler relevant til hvor du befinner deg.\n Dette kan du velge å slå av senere eller alternativt selv søke etter et område for varsling.</string>

    <!-- Search and location -->
    <string name="location">%1$s</string>
    <string name="superlocation">%1$s</string>
    <string name="your_location">Din posisjon</string>

    <!--Time and date -->
    <string name="time_and_date">Viser verdier for %s</string>

    <!-- Bottom navigation -->
    <string name="nav_home">Dashbord</string>
    <string name="nav_map">Kart</string>
    <string name="nav_settings">Innstillinger</string>

    <!-- Dashboard -->
    <string name="categories">Kategorier</string>
    <string name="categories_description">Trykk for mer informasjon og helsekonsekvenser</string>
    <string name="preference_title_location">Posisjon</string>
    <string name="preference_title_dashboard">Dashbord</string>
    <string name="preference_title_push">Push-varsler</string>
    <string name="empty_dashboard">Dashbordet er tomt</string>
    <string name="empty_dashboard_desc">Gå til innstillinger for å aktivere kategorier</string>
    <string name="permission_denied_toast">For å bruke nåværende posisjon må du tillate forespørselen!</string>
    <string name="failed_location_query">Kunne ikke finne din posisjon. Velg manuelt eller prøv senere.</string>
    <string name="search_title">Søk etter område</string>
    <string name="retry_datafetch">"Prøver på nytt.."</string>

    <!-- Cardmodule -->
    <string name="category_icon">Ikon</string>
    <string name="category_title">Kategori</string>
    <string name="push_notification_icon">Pushvarsler</string>

    <!-- Airquality -->
    <string name="concentration">%.0f μm</string>
    <string name="concentration_placeholder">44 µm</string>
    <string name="my_location_icon_desc">Min posisjon ikon</string>
    <string name="pm1_0">PM1.0</string>
    <string name="o3">O3</string>
    <string name="no2">NO2</string>
    <string name="pm2_5">PM2.5</string>
    <string name="airquality_fragment_information">Luftkvalitet refererer til hvor forurenset luften rundt oss er, og kan bli verre av både naturlige årsaker som vulkanutbrudd, eller av menneskelige årsaker som kjøretøysforurensning, gasser fra industri og kraftverk og mer.\n\nTre faktorer står sentralt: mengden forurensede partikler, hvor raskt de slippes ut i atmosfæren, og hvor lenge de befinner seg i et område. Det er viktig å ha god luftkvalitet for å opprettholde livsbalansen på jorden.
        I denne appen får man informasjon om tre forskjellige metrikker for luftkvalitet:\n\n<b>NO2</b>\nNO2 eller nitrogendioksid, er en reaktiv gass som dannes ved høy temperatur i forbrenningsprosesser og kan ha helseskadelige effekter slik som svekket lungefunksjon eller forverring av astma og bronkitt.
        \n\n<b>PM10 og PM2.5</b>\nPM (particulate matter) er partikler i lufta. De kan bestå av alle slags partikler som for eksempel sot, kull, sulfat, metaller og salter, eksempelvis havsalt. Det fremkommer som regel som et tilfeldig biprodukt i ulike kjemiske og fysiske prosesser som sement, kalk, jern og stål produksjon, men kan også forekomme ved naturfenomener. Store doser kan skade luftveiene.
        \n\n<b>O3</b>\nO3, også kjent som ozon, er en reaktiv gass som finnes bla. nær bakken. Dette skyldes hovedsakelig langtransport i Norge og vil ha høyere konsentrasjon utenfor byene sammenlignet med lufta i byene.Ozon kan gi betennelse og føre til skader i luftveiene, samt svekke luftveis-funksjon og øke luftveisplager.
    </string>

    <!-- UV -->
    <string name="uv_fragment_information">UV-stråling er en type stråle som lages av solen og noen kunstige kilder som solarium.\nUV-stråling utgjør hovedgrunnen for hudkreft, og forårsaker også solbrenning og øyeskader. Det finnes to typer UV-stråling hvor bølgelengden varierer.
        \n\n<b>UVA</b>\nUVA Skader de elastiske fibrene i huden og arvestoffet, gir rask brunfarge, og slipper uhindret gjennom ozonlaget.
        \n\n<b>UVB</b>\nHornhinnen er følsom for UVB, kan forårsake ofte rød og irritert hud, slipper delvis gjennom ozonlaget.
    </string>
    <string name="uv_value_time">Viser verdier for hele dagen</string>

    <!-- Humidity -->
    <string name="precentage_placeholder">0.00%</string>
    <string name="precentage">%.0f<b>%%</b> </string>
    <string name="humidity_fragment_information">Luftfuktighet er et mål på hvor mye vanndamp det er i luften. Høy luftfuktighet innendørs gir en gunstig grobunn for vekst av mikrobiologiske organismer som bakterier, sopp og midd, og kan gi helseplager som luftveisinfeksjoner, astma, hodepine og mer.
    </string>

</resources>
