<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_dashboard"
    tools:background="@drawable/gradient_dashboard"

    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/logoDescription"
        android:src="@drawable/ic_app"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/onboardingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/onboarding_title"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_background"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/onboardingDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/onboarding_description"
        android:textAlignment="center"
        android:textColor="#B2FFFFFF"
        android:textSize="14sp" />

    <Button
        android:id="@+id/setupBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorWhite"
        android:letterSpacing="0"
        android:text="@string/setup_preferences"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp" />




</LinearLayout>
